--- a/doc-latex/gSOMOS-v3.lyx
+++ b/doc-latex/gSOMOS-v3.lyx
@@ -3661,6 +3661,9 @@ status open
 \begin_inset Text
 
 \begin_layout Plain Layout
+
+\series bold
+\size footnotesize
 MO 168
 \end_layout
 
@@ -3670,6 +3673,9 @@ MO 168
 \begin_inset Text
 
 \begin_layout Plain Layout
+
+\series bold
+\size footnotesize
 MO 169
 \end_layout
 
@@ -3679,6 +3685,9 @@ MO 169
 \begin_inset Text
 
 \begin_layout Plain Layout
+
+\series bold
+\size footnotesize
 MO 186
 \end_layout
 
@@ -3688,6 +3697,9 @@ MO 186
 \begin_inset Text
 
 \begin_layout Plain Layout
+
+\series bold
+\size footnotesize
 MO 187
 \end_layout
 
